client/src/components/Layout/index.module.css
.Layout {
    display: grid;
    grid-template-rows: 6.5em auto 2.5em;
    grid-row-gap: 0.5em;
    grid-template-areas: "header"
                         "main"
                         "footer";
    min-height: 100vh;
    background: #0e1117;
    color: white;
}

.Layout > header {
    grid-area: header;
    /*align-self: center;*/
    display: flex;
    justify-content: space-between;
    align-items: center;
    background: transparent;
}

.Layout > main {
    grid-area: main;
    align-self: center;
    justify-self: center;
}

.Layout > footer {
    grid-area: footer;
    align-self: end;
    width: 100%;
    text-align: center;
    font-size: 0.75em;
}

.HomeLink {
    height: 100%;
}

